--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,16 +1,11 @@
 <footer class="footer">
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> Tareas pendientes</span>
+    <span class="todo-count"><strong>{{pendientes}}</strong> Tareas pendientes</span>
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
-        <li>
-            <a class="selected" href="#/">Todas</a>
-        </li>
-        <li>
-            <a href="#/active">Activos</a>
-        </li>
-        <li>
-            <a href="#/completed">Completados</a>
+        <li *ngFor="let filtro of filtros">
+            <a [class.selected]="filtro===filtroActual" (click)="cambiarFiltro(filtro)">
+                {{filtro |titlecase}}</a>
         </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
