--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -9,5 +9,5 @@
         </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Borrar completados</button>
+    <button class="clear-completed" (click)="borrarCompletados()">Borrar completados</button>
 </footer>
